# conway3d

./: .editorconfig  README.md  main.py  pyproject.toml
conway3d/: __init__.py  blendutil.py  cell_block.py  cell_driver.py  cell_logic.py  config.py  conway_driver.py  conway_logic.py  stage.py  types.py
conway3d/conway/: __init__.py  conway_driver.py  conway_view.py
conway3d/datamodel/: __init__.py  cell_block.py  neighbors.py  types.py
conway3d/engine/: __init__.py  controller.py  conway.py  driver.py  game.py
conway3d/logic/: __init__.py  cell_logic.py  conway_driver.py
conway3d/visuals/: __init__.py  cell_block_view.py  cell_factory.py  cells.py
tests/: test_blendutil.py  test_cell_block.py
tests/datamodel/: datamodel_mocks.py  test_cell_block.py  test_neighbors.py
tests/engine/: test_driver.py
tests/mocks/: __init__.py  mock_driver.py
